@@ -1,1 +1,3 @@
 [B]Version 1.1.20[/B]
+porntrex - sort order changed to 'most relevant' for search results
+xhamster - fixed page not found errors
